--- a/index.css
+++ b/index.css
@@ -1,134 +1,69 @@
-*{
-    margin:0px;
-    padding:0px;
-    width:100%;
-    scroll-behavior: smooth;
-    box-sizing: border-box;
-    color: white;
-    font-weight: bold;
-    font-size: 30px;
-    font-family: 'Viaoda Libre', cursive;
+* {
+	margin: 0px;
+	padding: 0px;
+	scroll-behavior: smooth;
+	box-sizing: border-box;
+	font-family: "Viaoda Libre", cursive;
 }
 
 body {
-    overflow-x: hidden;
+	overflow-x: hidden;
 }
 
-a{
-    text-decoration: none;
-    color: white;
+a {
+	text-decoration: none;
+	color: white;
 }
 
-#nav-box{
-    display: flex;
-    position: relative;
-    flex-direction: column;
-    height: 40vh;
-    margin: 0px 5px 2px 5px;
-}
-.nav{
-    position: absolute;
-    display: flex;
-    justify-content:space-around;
-    align-items: center;
-    width: 100%;
-}
-  /* Nav Button CSS   */
-.btn{
-    padding: 5px;
-    text-align: center;
-    border-radius:30px;
-    margin: 10px;
-    box-sizing: border-box;
-    display: flex;
-    justify-content: center;
-    width: 150px;
-    border: none;
-    font-family: Arial, Helvetica, sans-serif;
-    font-weight: bolder;
-    font-size: 14pt;
-    background-color: rgb(17, 196, 62);
-    transition: all 0.5s ease-in 0s;
-}
-.btn:hover{
-    cursor: pointer;
-    background-color: rgb(231, 218, 38);
-    box-shadow: 2px 2px 2px red;
-    transform: rotate(360deg);
+#intro {
+	font-size: 30px;
+	font-weight: bold;
+	margin-top: 20vh;
 }
 
+.font-20 {
+	font-size: 20px;
+}
+
+::-webkit-scrollbar {
+	width: 5px;
+}
+
+::-webkit-scrollbar-track {
+	background: #f2f2f2;
+}
+
+::-webkit-scrollbar-thumb {
+	background: rgb(172, 172, 172);
+	border-radius: 10px;
+}
 
 #animated_background {
-    height:100vh;
-    width:100vw;
-}
-
-#animated_writing {
-    margin-top: 130px;
-    margin-left: 300px;
-    margin-right: 0px;
-    width: 30%;
-    color: white;
-    text-align: left;
-    z-index: 99999;
-    font-weight: bold;
-    font-size: 50px;
-    font-family: 'Viaoda Libre', cursive;
-    user-select: none;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-}
-
-.typewriter-text {
-    display: inline-block;
-    overflow: visible;
-    letter-spacing: 2px;
-    animation: typing 5s steps(23, end), blink 0.5s step-end infinite;
-    /* -o-animation-iteration-count: infinite; */
-    white-space: nowrap;
-    font-size: 30px;
-    font-weight: 700;
-    border-right: 4px solid rgb(17,24,39);
-    box-sizing: border-box;
-}
-
-div {
-    display: block;
-}
-
-@keyframes typing {
-    0% {
-        width:0%;
-    }
-    100% {
-        width:30%;
-    }
+	height: 100vh;
+	width: 100vw;
 }
 
 #pro1 {
-    height:100%;
-    width:100%;
+	height: 100%;
+	width: 100%;
 }
 
 .card {
-    width:100%;
+	width: 100%;
 }
 
 .social {
-    display: flex;
-    text-align: center;
-    justify-content: center;
-    width: 40vw;
-    margin: 0 auto;
+	display: flex;
+	text-align: center;
+	justify-content: center;
+	width: 40vw;
+	margin: 0 auto;
 }
 
 .fa-brands {
-    margin:40px;
+	margin: 40px;
 }
 
 #project_link {
-    display:flex;
-    
-    /* text-align: center; */
+	display: flex;
 }
